--- a/res/xml/miscellaneous_settings.xml
+++ b/res/xml/miscellaneous_settings.xml
@@ -42,6 +42,6 @@
         android:key="navigation_bar_inverse"
         android:title="@string/navigation_bar_inverse_title"
         android:defaultValue="0"
-        settings:controller="com.krypton.settings.fragment.miscellaneous.NavBarInversePreferenceController" />
+        settings:controller="com.krypton.settings.miscellaneous.NavBarInversePreferenceController" />
 
 </PreferenceScreen>
