--- a/res/xml/theme_settings.xml
+++ b/res/xml/theme_settings.xml
@@ -22,7 +22,7 @@
           android:key="monet_engine_settings"
           android:title="@string/monet_engine_settings_title"
           android:summary="@string/monet_engine_settings_summary"
-          android:fragment="com.krypton.settings.fragment.theme.MonetEngineSettingsFragment" />
+          android:fragment="com.krypton.settings.theme.MonetEngineSettingsFragment" />
      
      <ListPreference
           android:key="icon_pack_list_preference"
