Revert "KryptonSettings: remove battery style and estimates preferences"
This reverts commit 248fb3a3863b196504537a007f3d6d233b48f19f.

--- a/res/xml/qs_settings.xml
+++ b/res/xml/qs_settings.xml
@@ -52,6 +52,14 @@
     <PreferenceCategory
         android:title="@string/miscellaneous_category_title" >
 
+        <!-- QS Battery estimates -->
+        <com.krypton.settings.preference.SystemSettingSwitchPreference
+            android:key="qs_show_battery_estimate"
+            android:title="@string/qs_show_battery_estimate_title"
+            android:summaryOn="@string/qs_show_battery_estimate_summary_on"
+            android:summaryOff="@string/qs_show_battery_estimate_summary_off"
+            android:defaultValue="false" />
+
         <!-- QS footer text toggle -->
         <com.krypton.settings.preference.SystemSettingSwitchPreference
             android:key="qs_footer_text_show"
