--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -14,6 +14,18 @@
      limitations under the License.
 -->
 <resources>
+    <!-- Battery styles -->
+    <string-array name="statusbar_battery_styles">
+        <item>@string/battery_style_portrait</item>
+        <item>@string/battery_style_circle</item>
+        <item>@string/battery_style_text</item>
+    </string-array>
+    <string-array name="statusbar_battery_style_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
     <!-- Edge light color modes -->
     <string-array name="edge_light_color_mode_entries" translatable="false">
         <item>@string/accent_color</item>
