--- a/res/xml/swipe_to_screenshot_settings.xml
+++ b/res/xml/swipe_to_screenshot_settings.xml
@@ -18,17 +18,16 @@
     xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:title="@string/three_finger_gesture_title">
 
-    <com.android.settings.widget.VideoPreference
+    <com.android.settingslib.widget.IllustrationPreference
         android:key="swipe_to_screenshot_video"
-        settings:animation="@raw/swipe_to_screenshot"
-        settings:preview="@drawable/swipe_to_screenshot" />
+        settings:searchable="false"
+        settings:lottie_rawRes="@raw/lottie_gesture_swipe_to_screenshot" />
 
     <SwitchPreference
         android:key="swipe_to_screenshot"
         android:title="@string/three_finger_gesture_title"
         android:summary="@string/three_finger_gesture_summary"
         settings:keywords="@string/keywords_gesture"
-        settings:controller="com.flamingo.settings.gestures.SwipeToScreenshotPreferenceController"
-        settings:allowDividerAbove="true" />
+        settings:controller="com.flamingo.settings.gestures.SwipeToScreenshotPreferenceController" />
 
 </PreferenceScreen>
