--- a/res/xml/lockscreen_settings.xml
+++ b/res/xml/lockscreen_settings.xml
@@ -17,4 +17,10 @@
     xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:title="@string/lockscreen_settings_title">
 
+    <com.flamingo.support.preference.SystemSettingSwitchPreference
+        android:key="lockscreen_battery_info"
+        android:title="@string/lockscreen_charging_info_title"
+        android:summary="@string/lockscreen_charging_info_summary"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
