--- a/res/xml/lockscreen_settings.xml
+++ b/res/xml/lockscreen_settings.xml
@@ -23,4 +23,10 @@
         android:summary="@string/lockscreen_charging_info_summary"
         android:defaultValue="true" />
 
+    <com.flamingo.support.preference.SystemSettingSwitchPreference
+        android:key="double_tap_sleep_lockscreen"
+        android:title="@string/double_tap_sleep_lockscreen_title"
+        android:summary="@string/double_tap_sleep_lockscreen_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
