FlamingoSettings: add screen off udfps preference
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/xml/lockscreen_settings.xml
+++ b/res/xml/lockscreen_settings.xml
@@ -29,4 +29,11 @@
         android:summary="@string/double_tap_sleep_lockscreen_summary"
         android:defaultValue="false" />
 
+    <com.flamingo.support.preference.SystemSettingSwitchPreference
+        android:key="screen_off_udfps"
+        android:title="@string/screen_off_udfps_title"
+        android:summary="@string/screen_off_udfps_summary"
+        android:defaultValue="false"
+        settings:controller="com.flamingo.settings.lockscreen.ScreenOffUdfpsPreferenceController" />
+
 </PreferenceScreen>
