FlamingoSettings: add screenshot sound preference
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/xml/miscellaneous_settings.xml
+++ b/res/xml/miscellaneous_settings.xml
@@ -17,4 +17,11 @@
     xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:title="@string/miscellaneous_settings_title">
 
+    <!-- Screenshot sound -->
+    <com.flamingo.support.preference.SystemSettingSwitchPreference
+        android:key="screenshot_shutter_sound"
+        android:title="@string/screenshot_shutter_sound_title"
+        android:summary="@string/screenshot_shutter_sound_summary"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
