--- a/res/xml/miscellaneous_settings.xml
+++ b/res/xml/miscellaneous_settings.xml
@@ -24,4 +24,11 @@
         android:summary="@string/screenshot_shutter_sound_summary"
         android:defaultValue="true" />
 
+    <!-- Volume key music control -->
+    <com.flamingo.support.preference.SystemSettingSwitchPreference
+        android:key="volume_button_music_control"
+        android:title="@string/volume_button_music_control_title"
+        android:summary="@string/volume_button_music_control_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
