--- a/res/xml/qs_panel_settings.xml
+++ b/res/xml/qs_panel_settings.xml
@@ -49,4 +49,26 @@
             settings:min="0" />
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:title="@string/brightness_slider">
+
+        <com.flamingo.support.preference.SystemSettingListPreference
+            android:key="brightness_slider_position"
+            android:title="@string/brightness_slider_position_title"
+            android:summary="%s"
+            android:entries="@array/brightness_slider_position_entries"
+            android:entryValues="@array/brightness_slider_position_values"
+            android:defaultValue="0" />
+
+        <com.flamingo.support.preference.SystemSettingSwitchPreference
+            android:key="qqs_show_brightness"
+            android:title="@string/qqs_show_brightness_title"
+            android:defaultValue="false" />
+
+        <com.flamingo.support.preference.SystemSettingSwitchPreference
+            android:key="show_auto_brightness_button"
+            android:title="@string/show_auto_brightness_button_title"
+            android:defaultValue="false" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
