--- a/res/xml/theme_settings.xml
+++ b/res/xml/theme_settings.xml
@@ -17,4 +17,11 @@
     xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:title="@string/theme_settings_title">
 
+    <!-- Monet -->
+    <Preference
+        android:key="monet_engine_settings"
+        android:title="@string/monet_engine_settings_title"
+        android:summary="@string/monet_engine_settings_summary"
+        android:fragment="com.flamingo.settings.theme.MonetEngineSettings" />
+
 </PreferenceScreen>
