FlamingoSettings: add icon pack preference
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/xml/theme_settings.xml
+++ b/res/xml/theme_settings.xml
@@ -24,4 +24,9 @@
         android:summary="@string/monet_engine_settings_summary"
         android:fragment="com.flamingo.settings.theme.MonetEngineSettings" />
 
+    <!-- Icon pack -->
+    <ListPreference
+        android:key="icon_pack_preference"
+        android:title="@string/icon_pack_preference_title" />
+
 </PreferenceScreen>
