--- a/res/xml/theme_settings.xml
+++ b/res/xml/theme_settings.xml
@@ -29,4 +29,9 @@
         android:key="icon_pack_preference"
         android:title="@string/icon_pack_preference_title" />
 
+    <!-- Font -->
+    <ListPreference
+        android:key="font_preference"
+        android:title="@string/font_preference_title"/>
+
 </PreferenceScreen>
