--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -62,16 +62,10 @@
             android:defaultValue="false" />
 
     </PreferenceCategory>
-
-    <!-- Miscellaneous -->
-    <PreferenceCategory
-        android:title="@string/miscellaneous_settings_title">
-
-        <!-- Location privacy indicator -->
-        <com.flamingo.support.preference.SecureSettingSwitchPreference
-            android:key="enable_location_privacy_indicator"
-            android:title="@string/location_privacy_indicator_title"
-            android:defaultValue="false" />
+	
+     <!-- Icons -->	
+     <PreferenceCategory
+        android:title="@string/statusbar_icon_title">
 
         <!-- Combined signal icons -->
         <com.flamingo.support.preference.SecureSettingSwitchPreference
@@ -80,14 +74,7 @@
             android:summary="@string/combined_status_bar_signal_icons_summary"
             settings:controller="com.flamingo.settings.statusbar.CombinedSignalIconPreferenceController" />
 
-        <!-- Notification Counter -->
-        <com.flamingo.support.preference.SystemSettingSwitchPreference
-            android:key="status_bar_notif_count"
-            android:title="@string/status_bar_notif_count_title"
-            android:summary="@string/status_bar_notif_count_summary"
-            settings:controller="com.flamingo.settings.statusbar.NotificationCountPreferenceController" />
-        
-        <!-- 4G icon  -->
+	<!-- 4G icon  -->
         <com.flamingo.support.preference.SystemSettingSwitchPreference
             android:key="show_fourg_icon"
             android:title="@string/show_fourg_icon_title"
@@ -108,6 +95,25 @@
             android:summary="@string/icon_manager_summary">
             <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
         </Preference>
+	     
+    </PreferenceCategory>
+
+    <!-- Miscellaneous -->
+    <PreferenceCategory
+        android:title="@string/miscellaneous_settings_title">
+
+        <!-- Location privacy indicator -->
+        <com.flamingo.support.preference.SecureSettingSwitchPreference
+            android:key="enable_location_privacy_indicator"
+            android:title="@string/location_privacy_indicator_title"
+            android:defaultValue="false" />
+
+        <!-- Notification Counter -->
+        <com.flamingo.support.preference.SystemSettingSwitchPreference
+            android:key="status_bar_notif_count"
+            android:title="@string/status_bar_notif_count_title"
+            android:summary="@string/status_bar_notif_count_summary"
+            settings:controller="com.flamingo.settings.statusbar.NotificationCountPreferenceController" />
 
     </PreferenceCategory>
 
