--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -106,7 +106,7 @@
         <com.flamingo.support.preference.SecureSettingSwitchPreference
             android:key="enable_location_privacy_indicator"
             android:title="@string/location_privacy_indicator_title"
-            android:defaultValue="false" />
+            android:defaultValue="true" />
 
         <!-- Notification Counter -->
         <com.flamingo.support.preference.SystemSettingSwitchPreference
