--- a/res/xml/app_lock_settings.xml
+++ b/res/xml/app_lock_settings.xml
@@ -36,7 +36,6 @@
     <SwitchPreference
         android:key="app_lock_biometrics_allowed"
         android:title="@string/app_lock_biometrics_allowed_title"
-        android:persistent="false"
-        settings:controller="com.flamingo.settings.security.applock.AppLockBiometricPreferenceController" />
+        android:persistent="false" />
 
 </PreferenceScreen>
