--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -97,6 +97,24 @@
 	     
     </PreferenceCategory>
 
+    <!-- Privacy -->
+    <PreferenceCategory
+        android:title="@string/privacy">
+
+        <!-- Mic / camera -->
+        <SwitchPreference
+            android:key="camera_mic_icons_enabled"
+            android:title="@string/camera_mic_icons_title"
+            settings:controller="com.flamingo.settings.statusbar.PrivacyIndicatorPreferenceController" />
+
+        <!-- Location -->
+        <SwitchPreference
+            android:key="location_indicators_enabled"
+            android:title="@string/location_indicators_title"
+            settings:controller="com.flamingo.settings.statusbar.PrivacyIndicatorPreferenceController" />
+
+    </PreferenceCategory>
+
     <!-- Miscellaneous -->
     <PreferenceCategory
         android:title="@string/miscellaneous_settings_title">
